--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fade box",
+  "name": "fade-box",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,7 +17,6 @@
     "gulp-cssnano": "^2.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^2.0.6",
